@@ -8,7 +8,7 @@
 define( function( require ) {
   'use strict';
 
-  // imports
+  // modules
   var inherit = require( 'PHET_CORE/inherit' );
   var interpolateRBGA = require( 'SCENERY/util/Color' ).interpolateRBGA;
   var PropertySet = require( 'AXON/PropertySet' );
